# rust-backend

./: .gitignore  Cargo.toml  vercel.json
src/: constants.rs  errors.rs  main.rs
src/routes/: auth.rs
static/: index.html
tests/: quick_dev.rs
