[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
# Serde / json
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
# Axum
axum = { version = "0.7.9" }
tower-http = { version = "0.4.0", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.44"
httpc-test = "0.1.0"
